--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <link rel="stylesheet" href="assets/css/team.css">
 
     <link rel="stylesheet" href="assets/css/feedback.css">
-    <title> New Transport and Logistics</title>
+    <title>ABF Shipping</title>
     <!-- Favicon Link -->
-    <link rel="icon" type="image/png" href="https://www.albahralfakhershipping.com/img/logo.png">
+    <link rel="icon" type="image/png" href="assets/img/favicon.png">
 </head>
 </head>
 
@@ -52,6 +52,8 @@
         </div>
     </div> -->
     <!-- PreLoader End -->
+
+    <!-- Header Area Start -->
 
     <!-- Header Area Start -->
     <div class="header-area">
@@ -126,76 +128,19 @@
                         <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                             <ul class="navbar-nav ms-auto">
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link dropdown-toggle active">Home</a>
+                                    <a href="/index.html" class="nav-link  active">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <!-- <a href="about.html" class="nav-link">About</a> -->
-                                    <a href="" class="nav-link">About</a>
+                                    <a href="/about.html" class="nav-link">About</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link dropdown-toggle">Services</a>
-                                    <!-- <ul class="dropdown-menu">
-                                        <li class="nav-item">
-                                            <a href="service.html" class="nav-link">Services One</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a href="service-two.html" class="nav-link">Services Two</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a href="ocean-freight.html" class="nav-link">Ocean Freight</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a href="service-details.html" class="nav-link">Services Details</a>
-                                        </li>
-                                    </ul> -->
-                                </li>
-                                <!-- <li class="nav-item">
-                                        <a href="#" class="nav-link dropdown-toggle">Workers</a>
-                                        <ul class="dropdown-menu">
-                                            <li class="nav-item">
-                                                <a href="worker.html" class="nav-link">Workers Style One</a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a href="worker-two.html" class="nav-link">Workers Style Two</a>
-                                            </li>
-                                        </ul>
-                                    </li> -->
-                                <!-- <li class="nav-item">
-                                        <a href="#" class="nav-link dropdown-toggle">Pages</a>
-                                        <ul class="dropdown-menu">
-                                            <li class="nav-item">
-                                                <a href="faq.html" class="nav-link">FAQ</a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a href="404.html" class="nav-link">404</a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a href="why-choose.html" class="nav-link">Why Choose Us</a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a href="privacy.html" class="nav-link">Privacy policy</a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a href="terms.html" class="nav-link">Terms & Conditions</a>
-                                            </li>
-                                        </ul>
-                                    </li> -->
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link dropdown-toggle">Blog</a>
-                                    <!-- <ul class="dropdown-menu">
-                                            <li class="nav-item">
-                                                <a href="blog.html" class="nav-link">Blog</a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a href="blog-two.html" class="nav-link">Blog Style Two</a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a href="blog-details.html" class="nav-link">Blog Details</a>
-                                            </li>
-                                        </ul> -->
+                                    <a href="/service.html" class="nav-link ">Services</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="" class="nav-link">Contact Us</a>
+                                    <a href="/blog.html" class="nav-link ">Blog</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="/contact.html" class="nav-link">Contact Us</a>
                                 </li>
                             </ul>
                         </div>
@@ -1535,27 +1480,28 @@
                 <div class="col-lg-3 col-sm-6">
                     <div class="footer-widget">
                         <a href="index.html">
-                            <img class="footer_logo" src="https://www.albahralfakhershipping.com/img/logo.png"
-                                alt="logo">
+                            <img src="assets/img/logo-2.png" alt="logo">
                         </a>
                         <ul>
                             <li>
                                 <i class="icofont-phone"></i>
-                                <a href="tel:+0112345678">
-                                    +1 123 456 789
+                                <a href="tel:00971 56 6495103">
+                                    00971 56 6495103
                                 </a>
                             </li>
 
                             <li>
                                 <i class="icofont-ui-message"></i>
-                                <a href="mailto:hello@fixa.com">
+                                <a href="mailto:hello@abfshipping.com">
                                     hello@abfshipping.com
                                 </a>
                             </li>
 
-                            <li>
+                            <li class="footer_address">
                                 <i class="icofont-location-pin"></i>
-                                28/A , New York, USA
+                                Deira, Duabi
+                                Office 425, Block B ,Business Village
+
                             </li>
                         </ul>
 
@@ -1581,19 +1527,19 @@
                         <h3>Our Services</h3>
                         <ul>
                             <li>
-                                <a href="">Air Freight</a>
+                                <a href="service-details.html">Air Freight</a>
                             </li>
                             <li>
-                                <a href="">Road Freight</a>
+                                <a href="service-details.html">Road Freight</a>
                             </li>
                             <li>
-                                <a href="">Ocean Freight</a>
+                                <a href="ocean-freight.html">Ocean Freight</a>
                             </li>
                             <li>
-                                <a href="">Warehousing</a>
+                                <a href="service-details.html">Warehousing</a>
                             </li>
                             <li>
-                                <a href="">Storage </a>
+                                <a href="service-details.html">Storage</a>
                             </li>
                         </ul>
                     </div>
@@ -1604,19 +1550,19 @@
                         <h3>Our Support</h3>
                         <ul>
                             <li>
-                                <a href="">Privacy & Policy</a>
+                                <a href="privacy.html">Privacy & Policy</a>
                             </li>
                             <li>
-                                <a href="">FAQS</a>
+                                <a href="faq.html">FAQS</a>
                             </li>
                             <li>
-                                <a href="">Terms & Conditions</a>
+                                <a href="terms.html">Terms & Conditions</a>
                             </li>
                             <li>
-                                <a href="">Contact Us</a>
+                                <a href="contact.html">Contact Us</a>
                             </li>
                             <li>
-                                <a href="">About Us</a>
+                                <a href="about.html">About Us</a>
                             </li>
                         </ul>
                     </div>
@@ -1627,24 +1573,25 @@
                         <h3>Quick Links</h3>
                         <ul>
                             <li>
-                                <a href="">Home</a>
+                                <a href="index.html">Home</a>
                             </li>
                             <li>
-                                <a href="">About Us</a>
+                                <a href="about.html">About Us</a>
                             </li>
                             <li>
-                                <a href=""> Our Services </a>
+                                <a href="service.html">Our Services</a>
                             <li>
-                                <a href="">Our Blog</a>
+                                <a href="blog.html">Our Blog</a>
                             </li>
                             <li>
-                                <a href="">Eemrgency Support</a>
+                                <a href="contact.html">Eemrgency Support</a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
+
         <div class="copyright-area">
             <p>Copyright @ABF Shipping All Rights Reserved by <a href="#" target="_blank">Al Bahr Al Fakher Shipping</a>
             </p>
