--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <!-- For Mobile Device -->
             <div class="mobile-nav">
                 <a href="index.html" class="logo">
-                    <img src="https://www.albahralfakhershipping.com/img/logo.png" height="90" width="90" alt="logo">
+                    <img src="/assets/img/logo.png" height="90" width="90" alt="logo">
                 </a>
             </div>
 
@@ -122,8 +122,7 @@
                 <div class="container nav_color sticky_nav">
                     <nav class="navbar navbar-expand-lg navbar-light">
                         <a class="navbar-brand" href="index.html">
-                            <img src="https://www.albahralfakhershipping.com/img/logo.png" height="90" width="90"
-                                alt="logo">
+                            <img src="/assets/img/logo.png" height="90" width="90" alt="logo">
                         </a>
                         <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                             <ul class="navbar-nav ms-auto">
@@ -578,233 +577,233 @@
                 <!-- <div class="service_heading">
                     <h2>Services</h2>
                 </div> -->
-                <div class="service_section">
+                <div class="service_section "">
 
-                    <div class="mycard ">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <div class="card_img">
-                            <img src="https://arsal646.github.io/fixaaaa/assets/img/pic2.jpg"
-                                alt="Shipping company in dubai">
-                        </div>
-                        <div class="card_content">
-                            <p class="card_content_text"> NVOCC</p>
-
-                            <div class="theme-btn service_btn">
-                                <a href="about.html" class="default-btn">Know More</a>
-                            </div>
-
-                        </div>
-
+                    <div class=" mycard wow animate__animated animate__bounceInUp" data-wow-duration="1s">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <div class="card_img">
+                        <img src="https://arsal646.github.io/fixaaaa/assets/img/pic2.jpg"
+                            alt="Shipping company in dubai">
                     </div>
+                    <div class="card_content">
+                        <p class="card_content_text"> NVOCC</p>
 
-
-
-                    <div class="mycard">
-                        <div class="card_img">
-                            <img src="https://arsal646.github.io/fixaaaa/assets/img/pic2.jpg"
-                                alt="Shipping company in dubai">
-                        </div>
-                        <div class="card_content">
-                            <p> SHIPPING LINE AGENCY
-                            </p>
-                            <div class="theme-btn service_btn">
-                                <a href="about.html" class="default-btn">Know More</a>
-                            </div>
-
-                        </div>
-
-                    </div>
-
-
-
-                    <div class="mycard">
-                        <div class="card_img">
-                            <img src="https://arsal646.github.io/fixaaaa/assets/img/pic2.jpg"
-                                alt="Shipping company in dubai">
-                        </div>
-                        <div class="card_content">
-                            <p> INTERNATIONAL FREIGHT FORWARDING</p>
-                            <div class="theme-btn service_btn">
-                                <a href="about.html" class="default-btn">Know More</a>
-                            </div>
-
-                        </div>
-
-                    </div>
-
-                    <div class="mycard">
-                        <div class="card_img">
-                            <img src="https://arsal646.github.io/fixaaaa/assets/img/pic2.jpg"
-                                alt="Shipping company in dubai">
-                        </div>
-                        <div class="card_content">
-                            <p> MULTI MODEL TRANSPORT</p>
-                            <div class="theme-btn service_btn">
-                                <a href="about.html" class="default-btn">Know More</a>
-                            </div>
-
-                        </div>
-
-                    </div>
-
-
-                    <div class="mycard">
-                        <div class="card_img">
-                            <img src="https://arsal646.github.io/fixaaaa/assets/img/pic2.jpg"
-                                alt="Shipping company in dubai">
-                        </div>
-                        <div class="card_content">
-                            <p> LCL CONSOLIDATION
-                            </p>
-                            <div class="theme-btn service_btn">
-                                <a href="about.html" class="default-btn">Know More</a>
-                            </div>
-
-                        </div>
-
-                    </div>
-
-
-                    <div class="mycard">
-                        <div class="card_img">
-                            <img src="https://arsal646.github.io/fixaaaa/assets/img/pic2.jpg"
-                                alt="Shipping company in dubai">
-                        </div>
-                        <div class="card_content">
-                            <p> THIRD PARTY LOGISTICS
-                            </p>
-                            <div class="theme-btn service_btn">
-                                <a href="about.html" class="default-btn">Know More</a>
-                            </div>
-
-                        </div>
-
-                    </div>
-
-
-                    <div class="mycard">
-                        <div class="card_img">
-                            <img src="https://arsal646.github.io/fixaaaa/assets/img/pic2.jpg"
-                                alt="Shipping company in dubai">
-                        </div>
-                        <div class="card_content">
-                            <p> WAREHOUSING AND DISTRIBUTION
-                            </p>
-                            <div class="theme-btn service_btn">
-                                <a href="about.html" class="default-btn">Know More</a>
-                            </div>
-
-                        </div>
-
-                    </div>
-
-
-                    <div class="mycard">
-                        <div class="card_img">
-                            <img src="https://arsal646.github.io/fixaaaa/assets/img/pic2.jpg"
-                                alt="Shipping company in dubai">
-                        </div>
-                        <div class="card_content">
-                            <p> CHARTERING - AIR & SEA
-                            </p>
-                            <div class="theme-btn service_btn">
-                                <a href="about.html" class="default-btn">Know More</a>
-                            </div>
-
-                        </div>
-
-                    </div>
-
-
-                    <div class="mycard">
-                        <div class="card_img">
-                            <img src="https://arsal646.github.io/fixaaaa/assets/img/pic2.jpg"
-                                alt="Shipping company in dubai">
-                        </div>
-                        <div class="card_content">
-                            <p> BREAK-BULK AND RO-RO SERVICES
-                            </p>
-                            <div class="theme-btn service_btn">
-                                <a href="about.html" class="default-btn">Know More</a>
-                            </div>
-
-                        </div>
-
-                    </div>
-
-
-                    <div class="mycard">
-                        <div class="card_img">
-                            <img src="https://arsal646.github.io/fixaaaa/assets/img/pic2.jpg"
-                                alt="Shipping company in dubai">
-                        </div>
-                        <div class="card_content">
-                            <p> PROJECT CARGO HANDLING
-                            </p>
-                            <div class="theme-btn service_btn">
-                                <a href="about.html" class="default-btn">Know More</a>
-                            </div>
-
-                        </div>
-
-                    </div>
-
-                    <div class="mycard">
-                        <div class="card_img">
-                            <img src="https://arsal646.github.io/fixaaaa/assets/img/pic2.jpg"
-                                alt="Shipping company in dubai">
-                        </div>
-                        <div class="card_content">
-                            <p> CUSTOMS CLEARANCE
-                            </p>
-                            <div class="theme-btn service_btn">
-                                <a href="about.html" class="default-btn">Know More</a>
-                            </div>
-
-                        </div>
-
-                    </div>
-
-
-                    <div class="mycard">
-                        <div class="card_img">
-                            <img src="https://arsal646.github.io/fixaaaa/assets/img/pic2.jpg"
-                                alt="Shipping company in dubai">
-                        </div>
-                        <div class="card_content">
-                            <p> PACKING AND REMOVALS
-                            </p>
-                            <div class="theme-btn service_btn">
-                                <a href="about.html" class="default-btn">Know More</a>
-                            </div>
-
-                        </div>
-
-                    </div>
-
-
-                    <div class="mycard">
-                        <div class="card_img">
-                            <img src="https://arsal646.github.io/fixaaaa/assets/img/pic2.jpg"
-                                alt="Shipping company in dubai">
-                        </div>
-                        <div class="card_content">
-                            <p> TRADING CONSULTANCY
-                            </p>
-                            <div class="theme-btn service_btn">
-                                <a href="about.html" class="default-btn">Know More</a>
-                            </div>
-
+                        <div class="theme-btn service_btn">
+                            <a href="about.html" class="default-btn">Know More</a>
                         </div>
 
                     </div>
 
                 </div>
-            </section>
+
+
+
+                <div class="mycard wow animate__animated animate__bounceInUp" data-wow-duration="1s">
+                    <div class="card_img">
+                        <img src="https://arsal646.github.io/fixaaaa/assets/img/pic2.jpg"
+                            alt="Shipping company in dubai">
+                    </div>
+                    <div class="card_content">
+                        <p> SHIPPING LINE AGENCY
+                        </p>
+                        <div class="theme-btn service_btn">
+                            <a href="about.html" class="default-btn">Know More</a>
+                        </div>
+
+                    </div>
+
+                </div>
+
+
+
+                <div class="mycard wow animate__animated animate__bounceInUp" data-wow-duration="1s">
+                    <div class="card_img">
+                        <img src="https://arsal646.github.io/fixaaaa/assets/img/pic2.jpg"
+                            alt="Shipping company in dubai">
+                    </div>
+                    <div class="card_content">
+                        <p> INTERNATIONAL FREIGHT FORWARDING</p>
+                        <div class="theme-btn service_btn">
+                            <a href="about.html" class="default-btn">Know More</a>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="mycard wow animate__animated animate__bounceInUp" data-wow-duration="1s">
+                    <div class="card_img">
+                        <img src="https://arsal646.github.io/fixaaaa/assets/img/pic2.jpg"
+                            alt="Shipping company in dubai">
+                    </div>
+                    <div class="card_content">
+                        <p> MULTI MODEL TRANSPORT</p>
+                        <div class="theme-btn service_btn">
+                            <a href="about.html" class="default-btn">Know More</a>
+                        </div>
+
+                    </div>
+
+                </div>
+
+
+                <div class="mycard wow animate__animated animate__bounceInUp" data-wow-duration="1s">
+                    <div class="card_img">
+                        <img src="https://arsal646.github.io/fixaaaa/assets/img/pic2.jpg"
+                            alt="Shipping company in dubai">
+                    </div>
+                    <div class="card_content">
+                        <p> LCL CONSOLIDATION
+                        </p>
+                        <div class="theme-btn service_btn">
+                            <a href="about.html" class="default-btn">Know More</a>
+                        </div>
+
+                    </div>
+
+                </div>
+
+
+                <div class="mycard wow animate__animated animate__bounceInUp" data-wow-duration="1s">
+                    <div class="card_img">
+                        <img src="https://arsal646.github.io/fixaaaa/assets/img/pic2.jpg"
+                            alt="Shipping company in dubai">
+                    </div>
+                    <div class="card_content">
+                        <p> THIRD PARTY LOGISTICS
+                        </p>
+                        <div class="theme-btn service_btn">
+                            <a href="about.html" class="default-btn">Know More</a>
+                        </div>
+
+                    </div>
+
+                </div>
+
+
+                <div class="mycard wow animate__animated animate__bounceInUp" data-wow-duration="1s">
+                    <div class="card_img">
+                        <img src="https://arsal646.github.io/fixaaaa/assets/img/pic2.jpg"
+                            alt="Shipping company in dubai">
+                    </div>
+                    <div class="card_content">
+                        <p> WAREHOUSING AND DISTRIBUTION
+                        </p>
+                        <div class="theme-btn service_btn">
+                            <a href="about.html" class="default-btn">Know More</a>
+                        </div>
+
+                    </div>
+
+                </div>
+
+
+                <div class="mycard wow animate__animated animate__bounceInUp" data-wow-duration="1s">
+                    <div class="card_img">
+                        <img src="https://arsal646.github.io/fixaaaa/assets/img/pic2.jpg"
+                            alt="Shipping company in dubai">
+                    </div>
+                    <div class="card_content">
+                        <p> CHARTERING - AIR & SEA
+                        </p>
+                        <div class="theme-btn service_btn">
+                            <a href="about.html" class="default-btn">Know More</a>
+                        </div>
+
+                    </div>
+
+                </div>
+
+
+                <div class="mycard wow animate__animated animate__bounceInUp" data-wow-duration="1s">
+                    <div class="card_img">
+                        <img src="https://arsal646.github.io/fixaaaa/assets/img/pic2.jpg"
+                            alt="Shipping company in dubai">
+                    </div>
+                    <div class="card_content">
+                        <p> BREAK-BULK AND RO-RO SERVICES
+                        </p>
+                        <div class="theme-btn service_btn">
+                            <a href="about.html" class="default-btn">Know More</a>
+                        </div>
+
+                    </div>
+
+                </div>
+
+
+                <div class="mycard wow animate__animated animate__bounceInUp" data-wow-duration="1s">
+                    <div class="card_img">
+                        <img src="https://arsal646.github.io/fixaaaa/assets/img/pic2.jpg"
+                            alt="Shipping company in dubai">
+                    </div>
+                    <div class="card_content">
+                        <p> PROJECT CARGO HANDLING
+                        </p>
+                        <div class="theme-btn service_btn">
+                            <a href="about.html" class="default-btn">Know More</a>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="mycard wow animate__animated animate__bounceInUp" data-wow-duration="1s">
+                    <div class="card_img">
+                        <img src="https://arsal646.github.io/fixaaaa/assets/img/pic2.jpg"
+                            alt="Shipping company in dubai">
+                    </div>
+                    <div class="card_content">
+                        <p> CUSTOMS CLEARANCE
+                        </p>
+                        <div class="theme-btn service_btn">
+                            <a href="about.html" class="default-btn">Know More</a>
+                        </div>
+
+                    </div>
+
+                </div>
+
+
+                <div class="mycard wow animate__animated animate__bounceInUp" data-wow-duration="1s">
+                    <div class="card_img">
+                        <img src="https://arsal646.github.io/fixaaaa/assets/img/pic2.jpg"
+                            alt="Shipping company in dubai">
+                    </div>
+                    <div class="card_content">
+                        <p> PACKING AND REMOVALS
+                        </p>
+                        <div class="theme-btn service_btn">
+                            <a href="about.html" class="default-btn">Know More</a>
+                        </div>
+
+                    </div>
+
+                </div>
+
+
+                <div class="mycard wow animate__animated animate__bounceInUp" data-wow-duration="1s">
+                    <div class="card_img">
+                        <img src="https://arsal646.github.io/fixaaaa/assets/img/pic2.jpg"
+                            alt="Shipping company in dubai">
+                    </div>
+                    <div class="card_content">
+                        <p> TRADING CONSULTANCY
+                        </p>
+                        <div class="theme-btn service_btn">
+                            <a href="about.html" class="default-btn">Know More</a>
+                        </div>
+
+                    </div>
+
+                </div>
+
         </div>
+    </section>
+    </div>
     </section>
     <!--  Service Section End -->
 
