--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <li>
                                 <a href="mailto:manager@albahralfakhershipping.com">
                                     <i class="icofont-ui-message"></i>
-                                    manager@albahralfakhershipping.com
+                                    manager
                                 </a>
                             </li>
                             <li>
